# bench

./: global_struct_arc_rwlock copy.rs  run_test.sh
c/: main  main.c
c/src/: global_struct.c  global_variable.c
read/: env.sh  run.sh  run_test.sh
read/c/: main
read/c/src/: global_struct.c  global_variable.c
read/rust/src/: global_struct_arc_rwlock.rs  global_variable_arc_rwlock.rs  main.rs
rust/: Cargo.toml
rust/src/: global_struct_arc_rwlock.rs  global_struct_atomic.rs  global_struct_refcell.rs  global_variable_arc_rwlock.rs  global_variable_atomic.rs  global_variable_refcell.rs  main.rs
