[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
num_cpus = "1"

[features]
default = ["global_variable_refcell"]
global_variable_arc_rwlock = []
global_variable_refcell = []
global_variable_atomic = []
global_struct_arc_rwlock = []
global_struct_refcell = []
global_struct_atomic = []